# hypodisc

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  generateInput.py  install.txt  mkdataset.py  plotClusters.py  pyproject.toml  setup.py  train.py
docker/: README.md
docs/source/: conf.py  examples.rst  hypodisc.rst  index.rst  install.rst  modules.rst
examples/multimodal/: README.md  test.hdt
examples/multimodal/data/: nodes.int.csv  relations.int.csv
hypodisc/: browse.py  embeddings.py  langutil.py  models.py  multimodal.py  run.py  sequential.py  structures.py  utils.py
hypodisc/core/: parallel.py  sequential.py  structures.py  utils.py
hypodisc/data/: dataset.py  graph.py  hdf5.py  json.py  jsons.py  tsv.py  utils.py  xsd_hierarchy.py
hypodisc/multimodal/: clustering.py  datatypes.py  langutil.py  timeutils.py
hypodisc/vectorizers/: numerical.py  spatial.py  temporal.py  textual.py  visual.py
hypodisc/www/static/: default.css  onto-hljs.css  shutdown.css
hypodisc/www/templates/: default.html  shutdown.html
test/linkprediction/: README.md  config.json  train.hdt  valid.hdt
test/linkprediction/data/: linkprediction_splits.int.csv  triples.int.csv
test/multimodal/data/: nodetypes.int.csv
tests/: README.md  test_dataset.nt  test_dataset_a.nt  test_dataset_b.nt
